[build-system]
requires = ["setuptools>=61.0", "Pandas 1.3.5", "Numpy 1.24.0", "matplotlib 3.6.3"]
build-backend = "setuptools.build_meta"
[project]
name = "TradeApp"
version = "0.0.1"
authors = [
  { name="Abdulrahman E Sulatn", email="absultan86@gmail.com" },
]
description = "A package to predict the stock market trend"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/absultan86/TradeApp/edit/TradeApp"
"Bug Tracker" = "https://github.com/absultan86/TradeApp/edit/TradeApp/issues"
